--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FizzaBuzzDom</title>
+    <title>FizzBuzzDom</title>
     <!-- internal stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- internal script -->
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <div id="prova"></div>
 </body>
 </html>
