--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FizzBuzzDom</title>
+    <!-- Bootstrap stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- internal stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- internal script -->
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    <div id="prova"></div>
-    
+    <h1 class="text-white text-center py-4">FizzBuzzDOM</h1>
+    <div class="container">
+        <div class="row row-cols-6 fw-bold">
+
+        </div>
+    </div>
 </body>
 </html>
